...
                            <constraint firstItem="YfK-D2-Ha0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oqT-mh-8vq"/>
                            <constraint firstItem="wJr-yN-eoL" firstAttribute="centerX" secondItem="h1h-V4-fdG" secondAttribute="centerX" id="ose-Jl-Ofy"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Heroes" largeTitleDisplayMode="never" id="d0h-MB-nRc">
                        <barButtonItem key="backBarButtonItem" title="Back" id="8zP-62-1tN"/>
                    </navigationItem>
                    <connections>
                        <outlet property="imgLaunchScreen" destination="h1h-V4-fdG" id="DZl-tt-CZf"/>
                        <outlet property="imgLaunchScreenConstraint" destination="lvM-xG-Yrc" id="SRQ-Pj-IfQ"/>
                        <outlet property="infoLoadingCharConstraint" destination="6o8-RC-DSn" id="fpl-Uk-G4M"/>
                        <outlet property="infoLoadingCharacters" destination="BcT-oy-7Oi" id="KEr-6b-eXW"/>
...
                            <constraint firstItem="O1z-PE-z8Y" firstAttribute="bottom" secondItem="8mT-JG-Fqx" secondAttribute="bottom" id="Y3l-ay-8yU"/>
                            <constraint firstItem="xRM-Iy-Apl" firstAttribute="width" secondItem="yy1-ny-X8M" secondAttribute="width" id="iUu-fr-Sjj"/>
                            <constraint firstItem="8mT-JG-Fqx" firstAttribute="top" secondItem="O1z-PE-z8Y" secondAttribute="top" id="yZK-f7-n0i"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="O1z-PE-z8Y"/>
                    </view>
                    <navigationItem key="navigationItem" title="Details" largeTitleDisplayMode="never" id="Vnl-9d-FcI">
                        <barButtonItem key="backBarButtonItem" title="Back" id="2Kj-dz-iLK"/>
                    </navigationItem>
                    <nil key="simulatedTopBarMetrics"/>
                    <connections>
                        <outlet property="bigImg" destination="mch-lM-vLk" id="VkX-nn-rD1"/>
                        <outlet property="labelDescription" destination="L6X-DF-356" id="Tm6-Ge-rL7"/>
...
